tests/e2e/failing/declaration/parent.unt
thread_def Main {
  int parent = 0;
}
